--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div id="companyInfo">
           <h1>Contact</h1>
           <h2>Explore California</h2>
-          <p>5605 Nota Street 1234<br />
+          <p>5605 Nota Street 1234 4567<br />
             Ventura, CA 93003</p>
           <p>866.555.4310<br />866.555.4314-1 <em>(24 hour support)</em></p>
         </div>
