--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           </ul>
         </div>
         <div id="companyInfo">
-          <h1>Contact</h1>
+          <h1>Contact-explore</h1>
           <h2>Explore California - remote change</h2>
           <p>5605 Nota Street short title change - seo<br />
             Ventura, CA 93003</p>
